--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,29 @@
 cmake_minimum_required(VERSION 3.23)
-project(GRPH)
+project(grph)
 
-set(CMAKE_CXX_STANDARD 23)
-#set(Boost_NO_WARN_NEW_VERSIONS 1)
+set(CMAKE_CXX_STANDARD 20)
 
-#set(Boost_INCLUDE_DIR /Users/a.p.evsyukov/develop/boost/boost_1_80_0)
-#
-#find_package(Boost COMPONENTS graph)
+#include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+#conan_basic_setup()
 
-#include_directories(${Boost_INCLUDE_DIR})
+find_package(GTest)
+#find_package(nlohmann_json 3.11.2 REQUIRED)
 
-add_executable(grph main.cpp grph/graph/random/UndirectedRandomGraph.cpp grph/graph/random/UndirectedRandomGraph.hpp grph/graph/common/AdjacencyMatrix.hpp grph/exceptions/graph/exceptions.h grph/graph/common/types.hpp grph/graph/common/AdjacencyList.cpp grph/graph/common/AdjacencyList.hpp grph/graph/common/EdgesList.hpp)
-#target_link_libraries(grph ${Boost_LIBRARIES})
+# Project specification
+add_executable(${PROJECT_NAME}
+        main.cpp
+        grph/graph/random/RandomGraphUtils.hpp
+        grph/graph/common/AdjacencyMatrix.hpp
+        grph/exceptions/graph/exceptions.h
+        grph/graph/common/types.hpp
+        grph/graph/common/AdjacencyList.hpp
+        grph/graph/common/EdgesList.hpp
+        grph/utils/parse/GMLParser.hpp
+        grph/utils/parse/TGFParser.hpp
+        grph/graph/common/DegreesVector.hpp grph/graph/random/UndirectedRandomGraph.hpp)
+
+## Add nlohmann_json support to project
+#target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+
+# Use the global target
+#target_link_libraries(${PROJECT_NAME} gtest::gtest)
